# cifar10_resnet

./: leap.yaml  leap_binder.py  leap_custom_test.py  leap_integration.py  leap_mapping.yaml  leap_test.py  pyproject.toml  requirements.txt
cifar10_resnet/: project_config.yaml
cifar10_resnet/data/: preprocess.py
