[tool.poetry]
name = "cifar10_resnet"
version = "0.1.0"
description = ""
authors = ["Chen Rothschild <chen.rothschild@tensorleap.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9, <3.11"
code-loader = "1.0.86"
code-loader-helpers = "1.0.20"
scikit-learn = "^1.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
test = "leap_test: check_integration"
custom_test = "leap_custom_test: check_custom_integration"

